@startuml Data_Model_Diagram
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

title ScribeHealth AI — Data Model Diagram\n(patients · sessions · entities · SOAP notes · audit logs)

package "Auth & Access" #EAF2FF {
  class profiles <<Supabase Table>> {
    + email : text  <<PK>>
    + name : text
    + role : text  <<DOCTOR | ADMIN>>
    + password_hash : text
    + is_active : boolean  <<default: true>>
    + specialization : text
    + license_number : text
    + created_at : timestamptz
    + last_login_at : timestamptz
  }
}

package "Patient & Session" #E9F7EF {
  class patients <<Supabase Table>> {
    + id : text  <<PK, UUID>>
    + doctor_email : text  <<FK → profiles.email>>
    + name : text
    + age : integer
    + gender : text
    + email : text
    + phone : text
    + chronic_conditions : jsonb
    + allergies : jsonb
    + emergency_contact : jsonb
    + insurance_details : jsonb
    + created_at : timestamptz
  }

  class sessions <<Supabase Table>> {
    + id : text  <<PK, UUID>>
    + patient_id : text  <<FK → patients.id>>
    + doctor_email : text  <<FK → profiles.email>>
    + status : text  <<see SessionStatus>>
    + transcription : text
    + audio_url : text
    + soap : jsonb  <<SoapNote>>
    + entities : jsonb  <<MedicalEntities>>
    + edits : jsonb
    + created_at : timestamptz
    + updated_at : timestamptz
  }
}

package "SOAP Note (inline JSONB)" #FEF9E7 {
  class SoapNote <<JSONB shape>> {
    + s : text  (Subjective)
    + o : text  (Objective)
    + a : text  (Assessment)
    + p : text  (Plan)
    + diagnosis : text
    + prescription : text
    + advice : text
    + follow_up : text
    .. specialty extras ..
    + safety_assessment : text  (MentalHealth)
    + wound_assessment : text  (Surgical)
    + home_exercise_program : text  (Physio)
    + parent_instructions : text  (Pediatric)
    + medications : text  (Cardiology)
    + next_review : text  (Surgical)
  }
}

package "Medical Entities (inline JSONB)" #FEF9E7 {
  class MedicalEntities <<JSONB shape>> {
    + symptoms : text[]
    + diagnoses : text[]
    + medications : jsonb[]  {name, dosage, frequency}
    + allergies : jsonb[]  {substance, severity}
    + vitals : jsonb[]  {metric, value, unit}
    + treatment_plans : text[]
  }
}

package "Session State (enum)" #F4F6F7 {
  class SessionStatus <<enum>> {
    SCHEDULED
    IN_PROGRESS
    RECORDED
    TRANSCRIBED
    UNDER_REVIEW
    APPROVED  <<terminal>>
    REJECTED
  }
}

package "Audit & Admin" #FDEDEC {
  class audit_logs <<Supabase Table — append-only>> {
    + id : uuid  <<PK, auto>>
    + user_email : text
    + action : text
    + entity_type : text
    + entity_id : text
    + metadata : jsonb
    + created_at : timestamptz  <<immutable>>
    .. actions ..
    login_success · logout
    patient_created · patient_updated · patient_deleted
    session_created · session_deleted
    note_generated · note_regenerated
    note_edited · note_approved · note_rejected
    notification_sent
  }
}

package "Prescription" #EAF2FF {
  class prescription_templates <<Supabase Table>> {
    + id : text  <<PK, UUID>>
    + doctor_email : text  <<FK → profiles.email>>
    + image_path : text
    + image_url : text
    + image_width : integer
    + image_height : integer
    + safe_zone : jsonb  {xPct, yPct, widthPct, heightPct,\n  fontSizePt, lineHeightPt}
    + created_at : timestamptz
  }
}

' Relationships
profiles "1" -- "0..*" patients : "doctor_email"
profiles "1" -- "0..*" sessions : "doctor_email"
profiles "1" -- "0..1" prescription_templates : "doctor_email"
patients "1" -- "0..*" sessions : "patient_id"

sessions "1" *-- "1" SoapNote : "soap (jsonb)"
sessions "1" *-- "1" MedicalEntities : "entities (jsonb)"
sessions --> SessionStatus : "status"

note right of audit_logs
  NFR-04: No UPDATE or DELETE
  ever issued on this table.
  Admin-only via AdminFacade.
end note

note right of sessions
  soap and entities stored as
  PostgreSQL JSONB — schema-flexible,
  indexed, and queryable.
end note

@enduml
